fixed a bug where scrolling wasn't maintained on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -593,7 +593,7 @@ Skills
         // 閉じるボタンはdisplay:none;で高さが聞かないため、こちらで代用
         // もっと見るボタンが押された場合は高さを0にする
         .skill-close-btn-height {
-          height: 46px;
+          height: 86px;
         }
 
         // Learn More ボタンはグラデーションさせないように、絶対配置させて独立させる。
